# inten

./: README.md  app.py  ollama_nl_sql.py  pyproject.toml  schema_data.py
